--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "license": "LGPL-3.0-or-later",
   "engines": {
-    "node": ">=23"
+    "node": ">=24"
   },
   "scripts": {
     "cert": "bash ./scripts/cert.sh",
     "clean": "bash ./scripts/clean.sh",
     "build": "turbo build",
-    "dev:studio": "turbo run dev --filter=@opendaw/app-studio",
-    "dev:headless": "turbo run dev --filter=@opendaw/app-headless",
-    "dev:example-import-sample": "turbo run dev --filter=@opendaw/example-import-sample",
-    "dev:lab": "turbo run dev --filter=@opendaw/lab",
+    "dev:studio": "turbo run dev --filter=@naomiarotest/app-studio",
+    "dev:headless": "turbo run dev --filter=@naomiarotest/app-headless",
+    "dev:example-import-sample": "turbo run dev --filter=@naomiarotest/example-import-sample",
+    "dev:lab": "turbo run dev --filter=@naomiarotest/lab",
     "dev:yjs-server": "turbo run dev --filter=yjs-server",
     "test": "turbo run test --concurrency=1",
     "lint": "turbo run lint",
