--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,7 @@
   "command": {
     "publish": {
       "conventionalCommits": true,
-      "registry": "https://npm.pkg.github.com",
+      "registry": "https://registry.npmjs.org/",
       "access": "public"
     }
   },
