change to public for CI

--- a/packages/config/eslint/package.json
+++ b/packages/config/eslint/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@naomiarotest/eslint-config",
     "version": "0.0.21",
-    "private": true,
+    "private": false,
     "main": "index.js",
     "publishConfig": {
         "access": "public"
