--- a/packages/config/typescript/package.json
+++ b/packages/config/typescript/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@naomiarotest/typescript-config",
   "version": "0.0.21",
-  "private": true,
+  "private": false,
   "publishConfig": {
     "access": "public"
   }
