--- a/packages/lib/box-forge/package.json
+++ b/packages/lib/box-forge/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@naomiarotest/lib-box-forge",
     "version": "0.0.51",
-    "private": true,
+    "private": false,
     "license": "LGPL-3.0-or-later",
     "exports": {
         ".": "./src/index.ts"
