--- a/packages/studio/forge-boxes/package.json
+++ b/packages/studio/forge-boxes/package.json
@@ -2,7 +2,7 @@
     "name": "@naomiarotest/studio-forge-boxes",
     "version": "0.0.51",
     "license": "LGPL-3.0-or-later",
-    "private": true,
+    "private": false,
     "exports": {
         ".": "./src/index.ts"
     },
