--- a/packages/config/typescript/package.json
+++ b/packages/config/typescript/package.json
@@ -4,5 +4,6 @@
   "private": false,
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "ddf7028d7c6a0e6e9d784a88b21ae10235825780"
 }
