--- a/packages/config/eslint/package.json
+++ b/packages/config/eslint/package.json
@@ -5,5 +5,6 @@
     "main": "index.js",
     "publishConfig": {
         "access": "public"
-    }
+    },
+    "gitHead": "ddf7028d7c6a0e6e9d784a88b21ae10235825780"
 }
