--- a/packages/lib/box-forge/package.json
+++ b/packages/lib/box-forge/package.json
@@ -2,6 +2,9 @@
     "name": "@naomiarotest/lib-box-forge",
     "version": "0.0.51",
     "private": false,
+    "publishConfig": {
+        "access": "public"
+    },
     "license": "LGPL-3.0-or-later",
     "exports": {
         ".": "./src/index.ts"
@@ -25,5 +28,6 @@
     "devDependencies": {
         "@naomiarotest/eslint-config": "^0.0.21",
         "@naomiarotest/typescript-config": "^0.0.21"
-    }
+    },
+    "gitHead": "ddf7028d7c6a0e6e9d784a88b21ae10235825780"
 }
