--- a/packages/server/yjs-server/package.json
+++ b/packages/server/yjs-server/package.json
@@ -1,7 +1,10 @@
 {
     "type": "module",
-    "name": "yjs-server",
+    "name": "@naomiarotest/yjs-server",
     "version": "1.0.23",
+    "publishConfig": {
+        "access": "public"
+    },
     "main": "index.js",
     "scripts": {
         "test": "echo \"No tests to run\"",
@@ -18,5 +21,5 @@
         "y-websocket": "^1.5.0",
         "yjs": "^13.6.27"
     },
-    "gitHead": "898f42398e2090a088dc66a960b37772980837a1"
+    "gitHead": "ddf7028d7c6a0e6e9d784a88b21ae10235825780"
 }
