--- a/packages/studio/forge-boxes/package.json
+++ b/packages/studio/forge-boxes/package.json
@@ -3,6 +3,9 @@
     "version": "0.0.51",
     "license": "LGPL-3.0-or-later",
     "private": false,
+    "publishConfig": {
+        "access": "public"
+    },
     "exports": {
         ".": "./src/index.ts"
     },
@@ -23,5 +26,6 @@
     "devDependencies": {
         "@naomiarotest/eslint-config": "^0.0.21",
         "@naomiarotest/typescript-config": "^0.0.21"
-    }
+    },
+    "gitHead": "ddf7028d7c6a0e6e9d784a88b21ae10235825780"
 }
