--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
         run: npm ci
 
       - name: Build all packages
-        run: npx turbo build --filter='!@naomiarotest/example-import-sample'
+        run: npx turbo build --filter='./packages/studio/*'
 
       - name: Publish changed packages
         run: npx lerna publish --yes
