--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Deduplicate workspace dependencies
+        run: |
+          # Remove ALL nested @naomiarotest packages to force resolution to workspace versions
+          find packages -path '*/node_modules/@naomiarotest' -type d -exec rm -rf {} + 2>/dev/null || true
+
       - name: Build all packages
         run: npx turbo build --filter='./packages/studio/*'
 
