--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,12 +36,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Build base packages first
+        run: |
+          # Build lib and base studio packages that others depend on
+          npx turbo build --filter='./packages/lib/*' --filter='@naomiarotest/studio-enums' --filter='@naomiarotest/studio-boxes' --filter='@naomiarotest/studio-forge-boxes' --filter='@naomiarotest/studio-adapters'
+
       - name: Deduplicate workspace dependencies
         run: |
           # Remove ALL nested @naomiarotest packages to force resolution to workspace versions
           find packages -path '*/node_modules/@naomiarotest' -type d -exec rm -rf {} + 2>/dev/null || true
 
-      - name: Build all packages
+      - name: Build remaining studio packages
         run: npx turbo build --filter='./packages/studio/*'
 
       - name: Publish changed packages
